<resources>
    <string name="app_name">MGU_App</string>
    <string name="jobs">JOBS</string>
    <string name="Questions">GK Questions</string>
    <string name="ok">OK</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_age">Please Enter Age</string>
    <string name="enter_mobile">Please Enter Mobile</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_comment">Please Enter Comment</string>
    <string name="send_feedback">Send FeedBack</string>
    <string name="submit">SUBMIT</string>

    <string name="total_question_attemp">Total Questions Attempetd</string>
    <string name="shareappvia">Share App Via</string>
    <string name="facebook">Facebook</string>
    <string name="cancels">Cancel</string>

    <string name="qualification">Qualification</string>
    <string name="salary">Salary</string>
    <string name="place">Place</string>

    <string name="finish">Finish</string>
    <string name="nointernet">There is no internet connection</string>
    <string name="first_quote">MG-U WISDOM \n PAITENCE AND VIRTUE ARE BIGGEST ASSET A MAN CAN HAVE</string>
    <string name="info">INFO</string>
    <string name="settings">Settings</string>
    <string name="job">JOB</string>
    <string name="gk_questions">GK Question</string>
    <string name="main">MainActivity</string>
    <string name="enter_to_filter">Enter to Filter</string>
    <string name="press_to_filter">Press for Filter</string>
    <string name="feedback">FeedBack</string>
    <string name="lucky_draw">Lucky Draw</string>

    <!--Feedback Form-->
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="comment">Write Your Feedback Here</string>
    <string name="email">Email</string>
    <string name="state">State</string>
    <string name="age">Age</string>

    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>

    <!--Questions-->
    <string name="question_no">Question No </string>
    <string name="time_since_started">Time Since Started</string>

    <!--Ad Mob Id-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--Result-->
    <string name="total_question">Total Questions</string>
    <string name="total_attempted">Total Attempted</string>
    <string name="answered_right">Answered Right</string>
    <string name="total_time">Total Time(Min)</string>
    <string name="review_questions">Review Questions</string>
    <string name="launch_new_quiz">Launch New Quiz</string>
    <string name="filters">Filters</string>
    <string name="jobsbyqualification">Jobs By Qualification</string>
    <string name="jobsbycity">Jobs By City</string>

    <string name="cancel">Cancel</string>
    <string name="quiz_summary">Quiz Summary</string>

    <string name="graduation">Graduation</string>
    <string name="bsc">B.sc</string>
    <string name="bcom">B.com</string>
    <string name="ca">CA</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="action_settings">Settings</string>

    <string name="activity_detail_title">DetailActivity</string>

    <string name="drawer_switch">SwitchSample</string>
    <string name="drawer_opensource">Open Source</string>

    <string name="progress_dialog">Fetching Questions</string>
    <string name="please_wait">Please wait…</string>

    <string name="dialog_nointernet">No internet connection!</string>
    <string name="dialog_uploading">Progress Sample&#8230;</string>
    <string name="dialog_processinganduploading">Showing a sample progress. Please be patient! (This does nothing. Just waiting 100ms / application)</string>

    <string name="facebook_app_id">1735553976515146</string>
    <string name="fb_login_protocol_scheme">fb1735553976515146</string>

    <string name="feedback_detail">Dear Valued User4, if You have have a complaint, praise or suggestion for our App please let us know.
If you have complaint regarding App Pleae let us know first than others, We will try to solve it
as soon as possible. Please submit your contact information, we may need to contact you. Thanks</string>

    <string name="lucky_draw_detail">Lucky draw is Every month, we give Free Talktime, Movie Tickets, Vouchers etc to a Random User
as a Thank You, Just Submit your information, Next might be You...</string>

    <string-array name="socialNetworks">
        <item>Twitter</item>
        <item>Google+</item>
        <item>Instagram</item>
        <item>Facebook</item>
    </string-array>

    <string-array name="textsize">
        <item>12 Pixel</item>
        <item>14 Pixel</item>
        <item>16 Pixel</item>
        <item>18 Pixel</item>
        <item>20 Pixel</item>
        <item>22 Pixel</item>
        <item>24 Pixel</item>
    </string-array>

</resources>
