<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/appbarLayout"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/apptheme"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_close_black_24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/filters"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#eeeeee"
        android:id="@+id/relativeQualification"
        app:layout_constraintTop_toBottomOf="@+id/appbarLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobsbyqualification"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/graduation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeQualification">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/graduation"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"/>

        <com.example.rupal.a.model.CustomCheckBox
            android:id="@+id/chkGraduation"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:color_checked="@color/apptheme"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bsc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/graduation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bsc"
            android:textColor="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"/>

        <com.example.rupal.a.model.CustomCheckBox
            android:id="@+id/chkbsc"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:color_checked="@color/apptheme"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bcom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/bsc">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bcom"
            android:textColor="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"/>

        <com.example.rupal.a.model.CustomCheckBox
            android:id="@+id/chkbcom"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:color_checked="@color/apptheme"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ca"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/bcom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ca"
            android:textColor="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"/>

        <com.example.rupal.a.model.CustomCheckBox
            android:id="@+id/chkca"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:color_checked="@color/apptheme"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#eeeeee"
        android:id="@+id/jobs_by_city"
        app:layout_constraintTop_toBottomOf="@+id/ca">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobsbycity"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
