<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/appbarLayout"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/apptheme"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleType="fitXY"
                android:src="@drawable/back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_feedback_detail"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/feedback_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1500000"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.94"
        android:textSize="16dp"
        android:textColor="#404040"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/questions_bg"
        android:textColorHint="@color/feedback_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/feedback_round"
        app:layout_constraintVertical_bias="0.3890000"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:lines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/questions_bg"
        android:textColorHint="@color/feedback_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/feedback_round"
        app:layout_constraintVertical_bias="0.492000"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9">

        <EditText
            android:id="@+id/edtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:lines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/questions_bg"
        android:textColorHint="@color/feedback_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596"
        android:background="@drawable/feedback_round"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/questions_bg"
        android:textColorHint="@color/feedback_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/feedback_round"
        app:layout_constraintVertical_bias="0.702"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9">

        <EditText
            android:id="@+id/edtState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/questions_bg"
        android:textColorHint="@color/feedback_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        app:layout_constraintWidth_default="percent"
        app:layout_heightPercent="0%"
        android:background="@drawable/feedback_round"
        app:layout_constraintWidth_percent="0.9">

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:inputType="textAutoCorrect"
            android:lines="10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_feedback"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/send_feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintWidth_default="percent"
        android:background="@color/grey"
        android:textSize="20sp"
        android:textColor="@color/apptheme"
        app:layout_constraintWidth_percent="0.8"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/appCompatImageViewAd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/a"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="H,720:1280"/>

        <Button
            android:id="@+id/btnClose"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_close_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
