<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:alpha="100"
        android:background="@drawable/shadow">

        <TextView
            android:id="@+id/shareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:text="@string/shareappvia"
            android:textColor="@color/black" />

        <RelativeLayout
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shareText"
            android:layout_marginBottom="@dimen/_16sdp">

            <ImageView
                android:id="@+id/img_fb"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:background="@drawable/fb_art" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/iv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_toRightOf="@id/img_fb"
                android:text="@string/facebook"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_16sdp" />
        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/facebook"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/grey" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <!-- <RelativeLayout
            android:id="@+id/whatsup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shareText">

            <ImageView
                android:id="@+id/img_whatsup"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/fb_art"
                android:layout_marginLeft="@dimen/_16sdp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:background="@color/yellow"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_toRightOf="@id/img_fb"/> -->
        <!--
        </RelativeLayout>
-->

    </RelativeLayout>

</RelativeLayout>
